--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,4 +1,6 @@
 nav {
+    display: flex;
+    justify-content: center;
     background-color: rgb(62, 54, 117);
     width: 100%;
     height: 4rem;
@@ -11,12 +13,13 @@ ul {
     margin: 0;
     font-size: 1.25rem;
     height: 100%;
+    padding: 0;
 }
 
 li {
     display: flex;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 2vw;
     height: 100%;
 }
 li:hover {
